--- a/index.html
+++ b/index.html
@@ -402,40 +402,109 @@
 
     <h2>Analyse Réflexive</h2>
 
-        <div class="reflection-container">
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <h3>Conception d’un projet de réseau informatique (AC31.01)</h3>
-                    </div>
-                    <div class="flip-card-back">
-                        <p>Lors de la conception du projet de réseau, j'ai pris en compte des facteurs importants comme la sécurité, la haute disponibilité et la QoS. Cependant, je réalise que j’aurais pu être plus proactif dans l'exploration de solutions alternatives et la mise en place d’une stratégie de gestion de crise pour mieux anticiper les imprévus.</p>
-                    </div>
-                </div>
-            </div>
+    <div class="reflection-container">
         
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <h3>Réalisation de la documentation technique (AC31.02)</h3>
-                    </div>
-                    <div class="flip-card-back">
-                        <p>La documentation que j’ai produite a permis de clarifier les choix techniques, mais j’ai identifié que je pourrais améliorer la structure et la présentation des informations pour faciliter leur compréhension.</p>
-                    </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Conception d’un projet de réseau informatique (AC31.01)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Lors de la conception du projet de réseau, j'ai pris en compte des facteurs importants comme la sécurité, la haute disponibilité et la QoS. Cependant, je réalise que j’aurais pu être plus proactif dans l'exploration de solutions alternatives et la mise en place d’une stratégie de gestion de crise.</p>
                 </div>
             </div>
-        
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <h3>Maquette de démonstration du projet (AC31.03)</h3>
-                    </div>
-                    <div class="flip-card-back">
-                        <p>La création de la maquette de démonstration m'a permis de tester l'implémentation du projet dans un environnement contrôlé, mais je me rends compte qu’une version plus interactive, permettant aux utilisateurs de tester différentes configurations, serait plus bénéfique.</p>
-                    </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Réalisation de la documentation technique (AC31.02)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>La documentation que j’ai produite a permis de clarifier les choix techniques, mais je pourrais améliorer sa structure avec plus de schémas et tableaux pour faciliter la compréhension.</p>
                 </div>
             </div>
-        </div>        
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Maquette de démonstration du projet (AC31.03)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Une version plus interactive, permettant aux utilisateurs de tester différentes configurations, aurait été plus bénéfique. Je pourrais aussi optimiser ma gestion du temps pour cette phase.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Défense et argumentation du projet (AC31.04)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>J’ai exposé mes choix techniques de manière structurée, mais je pourrais renforcer mes arguments avec des cas d’utilisation concrets et anticiper davantage les questions.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Gestion du projet et respect des délais (AC31.06)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Une meilleure anticipation des transitions entre les phases du projet et des points de suivi réguliers auraient limité les risques de retard.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Déploiement d’un réseau sans fil (AC32.02)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>J’ai sécurisé le réseau sans fil, mais je dois approfondir mes connaissances en segmentation pour mieux isoler les accès internes et invités.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Connexion sécurisée au SI (AC32.04)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>La mise en place de VPN et la gestion des identités étaient efficaces, mais je dois encore améliorer la gestion des droits d'accès et intégrer l'authentification multi-facteurs.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Élaboration des spécifications techniques (AC33.01)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Impliquer davantage les utilisateurs finaux dès les premières étapes permettrait d’améliorer la précision des spécifications techniques.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Gestion de crise et forensic (AC33.06)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Une meilleure préparation du PRA et une documentation plus rigoureuse de la gestion des incidents renforceraient la réactivité face aux crises.</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </section>
 
 <section id="analyse-reflexive" class="">
