--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                     <h3>Conception d’un projet de réseau informatique (AC31.01)</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>Lors de la conception du projet de réseau, j'ai pris en compte des facteurs importants comme la sécurité, la haute disponibilité et la QoS. Cependant, je réalise que j’aurais pu être plus proactif dans l'exploration de solutions alternatives et la mise en place d’une stratégie de gestion de crise.</p>
+                    <p>Lors de la conception du projet de réseau, j'ai pris en compte des facteurs importants comme la sécurité, la haute disponibilité et la QoS. Cependant, je réalise que j’aurais pu être plus proactif dans l'exploration de solutions alternatives et la mise en place d’une stratégie de gestion de crise pour mieux anticiper les imprévus. Une réflexion plus approfondie sur l’impact des choix techniques sur le long terme serait un axe d’amélioration pour garantir une plus grande flexibilité.</p>
                 </div>
             </div>
         </div>
@@ -421,7 +421,7 @@
                     <h3>Réalisation de la documentation technique (AC31.02)</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>La documentation que j’ai produite a permis de clarifier les choix techniques, mais je pourrais améliorer sa structure avec plus de schémas et tableaux pour faciliter la compréhension.</p>
+                    <p>La documentation que j’ai produite a permis de clarifier les choix techniques, mais j’ai identifié que je pourrais améliorer la structure et la présentation des informations pour faciliter leur compréhension. Pour cela, je devrais intégrer davantage de schémas explicatifs et de tableaux comparatifs afin que chaque partie prenante, peu importe son niveau technique, puisse accéder aux informations dont elle a besoin de manière plus intuitive.</p>
                 </div>
             </div>
         </div>
@@ -432,7 +432,7 @@
                     <h3>Maquette de démonstration du projet (AC31.03)</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>Une version plus interactive, permettant aux utilisateurs de tester différentes configurations, aurait été plus bénéfique. Je pourrais aussi optimiser ma gestion du temps pour cette phase.</p>
+                    <p>La création de la maquette de démonstration m'a permis de tester l'implémentation du projet dans un environnement contrôlé, mais je me rends compte qu’une version plus interactive, permettant aux utilisateurs de tester différentes configurations, serait plus bénéfique. Je pourrais également améliorer ma gestion du temps pour rendre cette phase plus fluide, afin de valider les choix techniques plus rapidement tout en garantissant un retour d’expérience plus complet.</p>
                 </div>
             </div>
         </div>
@@ -443,7 +443,18 @@
                     <h3>Défense et argumentation du projet (AC31.04)</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>J’ai exposé mes choix techniques de manière structurée, mais je pourrais renforcer mes arguments avec des cas d’utilisation concrets et anticiper davantage les questions.</p>
+                    <p>JLors de la défense du projet, j’ai exposé mes choix techniques de manière structurée, mais je constate que je pourrais renforcer mes arguments avec des exemples concrets de cas d’utilisation ou des données chiffrées. Pour améliorer mes présentations, il serait utile d’anticiper les questions ou préoccupations possibles de mes interlocuteurs et de préparer des réponses argumentées en conséquence.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Communication avec les acteurs du projet (AC31.05)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>J'ai réussi à maintenir une bonne communication avec les différentes parties prenantes, mais je pourrais mieux ajuster mon discours en fonction du niveau technique de chaque interlocuteur. Une approche plus ciblée dans mes échanges, notamment en expliquant davantage les implications des choix techniques pour les non-spécialistes, améliorerait la fluidité de la collaboration.</p>
                 </div>
             </div>
         </div>
@@ -454,7 +465,7 @@
                     <h3>Gestion du projet et respect des délais (AC31.06)</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>Une meilleure anticipation des transitions entre les phases du projet et des points de suivi réguliers auraient limité les risques de retard.</p>
+                    <p>La gestion du projet a été réalisée en respectant les délais, mais j'ai remarqué qu'il serait plus efficace de mieux anticiper les phases de transition entre les différentes étapes du projet. Une meilleure organisation, avec des points de suivi réguliers et des ajustements en temps réel, permettrait de limiter les risques de retard et de mieux gérer les imprévus sans impacter le calendrier global.</p>
                 </div>
             </div>
         </div>
@@ -465,7 +476,18 @@
                     <h3>Déploiement d’un réseau sans fil (AC32.02)</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>J’ai sécurisé le réseau sans fil, mais je dois approfondir mes connaissances en segmentation pour mieux isoler les accès internes et invités.</p>
+                    <p>J’ai mis en œuvre un réseau sans fil sécurisé, mais j'ai pris conscience qu'il me reste à approfondir mes compétences en matière de segmentation réseau pour mieux isoler les accès internes et invités. Une meilleure gestion de la configuration des bornes sans fil et une plus grande vigilance sur l’évolution des menaces pourraient m’aider à renforcer encore la sécurité du réseau.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Déploiement d’un réseau d’accès fixe ou mobile pour un opérateur de télécommunications (AC32.03)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Dans ce projet, j'ai pris en compte les enjeux de sécurité et de performance, mais je me rends compte que je peux améliorer la gestion des incidents et la surveillance en temps réel. Pour renforcer mes compétences, je devrais davantage me familiariser avec les outils de monitoring avancés et les processus de gestion des pannes, afin d’assurer une résilience maximale du réseau.</p>
                 </div>
             </div>
         </div>
@@ -484,10 +506,10 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <h3>Élaboration des spécifications techniques (AC33.01)</h3>
+                    <h3>Collaboration en mode projet (AC32.05)</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>Impliquer davantage les utilisateurs finaux dès les premières étapes permettrait d’améliorer la précision des spécifications techniques.</p>
+                    <p>La collaboration en mode projet m’a permis de développer ma capacité à communiquer en français et en anglais, mais je constate que je pourrais être plus précis dans la terminologie technique en anglais. Il serait avantageux pour moi de renforcer mon vocabulaire spécifique au domaine des réseaux et de la sécurité en anglais, afin de m’exprimer avec plus d’efficacité et d'assurer une meilleure compréhension lors de discussions internationales.</p>
                 </div>
             </div>
         </div>
@@ -495,10 +517,43 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <h3>Gestion de crise et forensic (AC33.06)</h3>
+                    <h3>Élaboration des spécifications techniques (AC33.01)</h3>
                 </div>
                 <div class="flip-card-back">
-                    <p>Une meilleure préparation du PRA et une documentation plus rigoureuse de la gestion des incidents renforceraient la réactivité face aux crises.</p>
+                    <p>Dans l’élaboration des spécifications techniques et du cahier des charges, j’ai pris soin de bien définir les besoins fonctionnels et techniques. Cependant, je réalise qu'il serait bénéfique pour moi d’impliquer davantage les utilisateurs finaux dès les premières étapes pour m'assurer que leurs besoins sont totalement compris et intégrés dans les documents. Une meilleure anticipation des contraintes techniques et une révision plus régulière des spécifications en fonction de l’avancement du projet améliorerait la clarté et la précision du cahier des charges.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Mise en place d’un environnement de travail collaboratif informatique (AC33.02)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>J'ai contribué à mettre en place un environnement collaboratif pour faciliter le travail d’équipe, mais je me rends compte que je pourrais améliorer l’adoption de ces outils en veillant à la formation continue des utilisateurs et à l'intégration des outils avec les processus existants. De plus, une meilleure gestion des accès et des permissions dans l’environnement collaboratif renforcerait la sécurité tout en optimisant l’efficacité du travail en équipe.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Déploiement et maintenance d’une solution informatique (AC33.04)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Le déploiement et la maintenance des solutions informatiques ont été réalisés efficacement, mais j’ai constaté qu'il est important d’améliorer la planification et la gestion des mises à jour pour éviter des interruptions de service non prévues. De plus, une gestion proactive des incidents et des retours d'expérience pourrait m’aider à mieux anticiper les problématiques futures et à assurer un suivi optimal après la mise en production des solutions.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>S’informer sur les évolutions et les nouveautés technologiques (AC33.05)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Je m'efforce de me tenir informé des évolutions technologiques, mais je réalise que je pourrais systématiser cette veille technologique en suivant des sources spécialisées et en m’impliquant davantage dans des communautés techniques. Un partage plus régulier de ces informations avec mes collègues permettrait également d’enrichir les connaissances collectives au sein de l’équipe.</p>
                 </div>
             </div>
         </div>
