--- a/index.html
+++ b/index.html
@@ -558,6 +558,17 @@
             </div>
         </div>
 
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3></h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Je m'efforce de me tenir informé des évolutions technologiques, mais je réalise que je pourrais systématiser cette veille technologique en suivant des sources spécialisées et en m’impliquant davantage dans des communautés techniques. Un partage plus régulier de ces informations avec mes collègues permettrait également d’enrichir les connaissances collectives au sein de l’équipe.</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 </section>
