--- a/index.html
+++ b/index.html
@@ -569,6 +569,50 @@
             </div>
         </div>
 
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Participer activement à une analyse de risque pour définir une politique de sécurité pour une petite structure</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Lors de l'analyse de risques pour définir une politique de sécurité, j'ai bien identifié les besoins de sécurité en fonction des niveaux 2, 3/4 et applicatifs. Cependant, je pourrais m'améliorer en affinant davantage l’évaluation des risques spécifiques à la structure, notamment en prenant en compte des facteurs comme l’évolution des menaces et les contraintes budgétaires. Une approche plus systématique de la priorisation des risques et des solutions associées pourrait me permettre de proposer des politiques de sécurité plus adaptées et efficaces.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Mettre en œuvre des outils avancés de sécurisation d’une infrastructure du réseau</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Lors de la mise en œuvre de mécanismes de sécurisation avancés comme les IDS/IPS et la gestion de VPN, j’ai appris à filtrer efficacement le trafic et à assurer une connexion sécurisée entre les sites. Toutefois, je peux améliorer la gestion des différents types de VPN (IPSec, OpenVPN, TLS, VPN MPLS) en approfondissant mes connaissances des configurations spécifiques à chaque technologie et en testant des scénarios plus complexes. La gestion des profils d’utilisateur et des accès WiFi reste également un domaine où je pourrais affiner ma maîtrise, en veillant à respecter les meilleures pratiques de sécurité.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Sécuriser les services (Mail, Web, DNS, LDAP, AD, ToIP, . . . )</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>La sécurisation des services comme le mail, le web, DNS, LDAP et AD a été bien abordée, mais je constate qu'il est essentiel de renforcer la sécurité de l’authentification et des flux de données associés. L’implémentation d’une authentification forte et le chiffrement des communications sont des axes d’amélioration que je pourrais davantage explorer. De plus, une veille continue sur les nouvelles vulnérabilités liées à ces services me permettrait de rester à jour et d’anticiper les attaques potentielles.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Proposer une architecture sécurisée de système d’information pour une petite structure</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>Lors de la proposition d'une architecture sécurisée pour une petite structure, j'ai sélectionné des composants réseau et système adaptés, tels que des switches, routeurs, firewalls et IDS/IPS, tout en intégrant des solutions VPN pour les accès distants. Cependant, je pense qu'il est nécessaire de développer davantage mes compétences dans la gestion des sauvegardes et des stratégies de récupération après sinistre. De plus, une planification plus détaillée de la disposition physique des composants réseau pourrait aider à renforcer la résilience de l’architecture face aux pannes matérielles ou aux intrusions physiques.</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 </section>
