--- a/index.html
+++ b/index.html
@@ -613,6 +613,28 @@
             </div>
         </div>
 
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Surveillance de l’activité du système d’information (SIEM, Métrologie, Logs)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>J'ai participé à l'installation et à l'administration de systèmes SIEM tels que ELK, QRadar et Splunk, ainsi qu'à la gestion des logs de sécurité. Cependant, je réalise que ma capacité à identifier et à exploiter les événements de sécurité pourrait être améliorée en affinant ma compréhension des différents types d'attaques et des indicateurs spécifiques dans les logs. De plus, l'automatisation des tâches via des outils comme Ansible ou Puppet reste un domaine où je pourrais renforcer mes compétences pour rendre les processus plus efficaces et moins sujets aux erreurs humaines.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Gestion de crise suite à un incident de sécurité (PRA, Forensic, CERT, CSIRT)</h3>
+                </div>
+                <div class="flip-card-back">
+                    <p>'ai eu l'occasion de gérer des incidents de sécurité, mais je me rends compte qu'une meilleure préparation et une planification plus rigoureuse du Plan de Reprise d’Activité (PRA) seraient des améliorations possibles. La gestion des preuves (copies de mémoires, logs, etc.) pourrait être renforcée par une meilleure documentation et un suivi rigoureux des procédures. De plus, lors des incidents, je pourrais améliorer la collaboration en équipe (CERT, CSIRT) en anticipant mieux les rôles et responsabilités de chacun pour être plus réactif et efficace. Enfin, un entraînement plus poussé sur la résilience et l'analyse forensic me permettrait d’affiner ma gestion des crises, en particulier sur la prise en charge de l’intégralité des preuves et la remédiation des impacts.</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 </section>
